todelete/gamification.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubectl.kubernetes.io/restartedAt: "2026-04-17T12:53:07+08:00"
    creationTimestamp: "2026-04-17T04:53:09Z"
    generateName: gamification-546cfc7bb7-
    generation: 1
    labels:
      app: gamification
      pod-template-hash: 546cfc7bb7
    name: gamification-546cfc7bb7-jk4fl
    namespace: microservices
    ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicaSet
      name: gamification-546cfc7bb7
      uid: d787a64f-740f-4baa-9d55-e7d30fc5bc83
    resourceVersion: "640957"
    uid: fcb7d840-934a-4088-8db7-9453fcbc56ee
  spec:
    containers:
    - env:
      - name: OTEL_EXPORTER_OTLP_ENDPOINT
        value: http://otel-lgtm:4318
      - name: OTEL_EXPORTER_OTLP_PROTOCOL
        value: http/protobuf
      - name: OTEL_SERVICE_NAME
        value: gamification
      - name: SPRING_CLOUD_CONSUL_HOST
        value: consul-server
      - name: SPRING_PROFILES_ACTIVE
        value: kubernetes
      - name: SPRING_RABBITMQ_HOST
        value: rabbitmq
      - name: SPRING_RABBITMQ_USERNAME
        valueFrom:
          secretKeyRef:
            key: username
            name: rabbitmq-default-user
      - name: SPRING_RABBITMQ_PASSWORD
        valueFrom:
          secretKeyRef:
            key: password
            name: rabbitmq-default-user
      image: gamification:0.0.1-SNAPSHOT
      imagePullPolicy: IfNotPresent
      livenessProbe:
        failureThreshold: 10
        httpGet:
          path: /actuator/health
          port: 8081
          scheme: HTTP
        initialDelaySeconds: 180
        periodSeconds: 15
        successThreshold: 1
        timeoutSeconds: 30
      name: gamification
      ports:
      - containerPort: 8081
        protocol: TCP
      readinessProbe:
        failureThreshold: 10
        httpGet:
          path: /actuator/health
          port: 8081
          scheme: HTTP
        initialDelaySeconds: 180
        periodSeconds: 15
        successThreshold: 1
        timeoutSeconds: 30
      resources:
        limits:
          cpu: 500m
          memory: 512Mi
        requests:
          cpu: 100m
          memory: 256Mi
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-zzx5n
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: kind-control-plane
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-zzx5n
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T04:54:03Z"
      observedGeneration: 1
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T04:53:15Z"
      observedGeneration: 1
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T04:57:05Z"
      observedGeneration: 1
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T04:57:05Z"
      observedGeneration: 1
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T04:53:09Z"
      observedGeneration: 1
      status: "True"
      type: PodScheduled
    containerStatuses:
    - allocatedResources:
        cpu: 100m
        memory: 256Mi
      containerID: containerd://2e3f8cd8f5b8d2a878a5a650353cb079e64c9e78e58c92213d4779c94bc2629f
      image: docker.io/library/gamification:0.0.1-SNAPSHOT
      imageID: sha256:11f6b12403a7dba59b5056f20cd675c684575588caa7b1fb4d69b595aadfdcd4
      lastState: {}
      name: gamification
      ready: true
      resources:
        limits:
          cpu: 500m
          memory: 512Mi
        requests:
          cpu: 100m
          memory: 256Mi
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2026-04-17T04:54:01Z"
      user:
        linux:
          gid: 0
          supplementalGroups:
          - 0
          uid: 0
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-zzx5n
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 172.20.0.2
    hostIPs:
    - ip: 172.20.0.2
    observedGeneration: 1
    phase: Running
    podIP: 10.244.0.236
    podIPs:
    - ip: 10.244.0.236
    qosClass: Burstable
    startTime: "2026-04-17T04:53:15Z"
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "12"
      meta.helm.sh/release-name: gamification
      meta.helm.sh/release-namespace: microservices
    creationTimestamp: "2026-04-14T09:44:44Z"
    generation: 13
    labels:
      app: gamification
      app.kubernetes.io/managed-by: Helm
    name: gamification
    namespace: microservices
    resourceVersion: "641059"
    uid: 018d9239-e0cf-449b-abe0-11561bdbca88
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: gamification
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-04-17T12:53:07+08:00"
        labels:
          app: gamification
      spec:
        containers:
        - env:
          - name: OTEL_EXPORTER_OTLP_ENDPOINT
            value: http://otel-lgtm:4318
          - name: OTEL_EXPORTER_OTLP_PROTOCOL
            value: http/protobuf
          - name: OTEL_SERVICE_NAME
            value: gamification
          - name: SPRING_CLOUD_CONSUL_HOST
            value: consul-server
          - name: SPRING_PROFILES_ACTIVE
            value: kubernetes
          - name: SPRING_RABBITMQ_HOST
            value: rabbitmq
          - name: SPRING_RABBITMQ_USERNAME
            valueFrom:
              secretKeyRef:
                key: username
                name: rabbitmq-default-user
          - name: SPRING_RABBITMQ_PASSWORD
            valueFrom:
              secretKeyRef:
                key: password
                name: rabbitmq-default-user
          image: gamification:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /actuator/health
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 30
          name: gamification
          ports:
          - containerPort: 8081
            protocol: TCP
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /actuator/health
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 30
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-04-17T02:11:27Z"
      lastUpdateTime: "2026-04-17T02:11:27Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-04-15T01:49:31Z"
      lastUpdateTime: "2026-04-17T04:57:14Z"
      message: ReplicaSet "gamification-546cfc7bb7" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 13
    readyReplicas: 1
    replicas: 1
    terminatingReplicas: 0
    updatedReplicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: gamification
      meta.helm.sh/release-namespace: microservices
    creationTimestamp: "2026-04-13T07:26:41Z"
    labels:
      app: gamification
      app.kubernetes.io/managed-by: Helm
    name: gamification
    namespace: microservices
    resourceVersion: "305297"
    uid: b995d667-d301-4230-b867-c9e123541d35
  spec:
    clusterIP: 10.96.230.14
    clusterIPs:
    - 10.96.230.14
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
    selector:
      app: gamification
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
