todelete/gateway.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubectl.kubernetes.io/restartedAt: "2026-04-17T12:53:07+08:00"
    creationTimestamp: "2026-04-17T04:53:09Z"
    generateName: gateway-684488cc84-
    generation: 1
    labels:
      app: gateway
      pod-template-hash: 684488cc84
    name: gateway-684488cc84-z2nh5
    namespace: microservices
    ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicaSet
      name: gateway-684488cc84
      uid: c84834c9-1a31-4627-9e33-4a854ebac6b7
    resourceVersion: "650161"
    uid: ad8c7bdf-e1f0-4ea6-834e-4a6209018f29
  spec:
    containers:
    - env:
      - name: OTEL_EXPORTER_OTLP_ENDPOINT
        value: http://otel-lgtm:4318
      - name: OTEL_EXPORTER_OTLP_PROTOCOL
        value: http/protobuf
      - name: OTEL_SERVICE_NAME
        value: gateway
      - name: SPRING_CLOUD_CONSUL_HOST
        value: consul-server
      - name: SPRING_PROFILES_ACTIVE
        value: kubernetes
      - name: SPRING_RABBITMQ_HOST
        value: rabbitmq
      - name: SPRING_RABBITMQ_USERNAME
        valueFrom:
          secretKeyRef:
            key: username
            name: rabbitmq-default-user
      - name: SPRING_RABBITMQ_PASSWORD
        valueFrom:
          secretKeyRef:
            key: password
            name: rabbitmq-default-user
      image: gateway:0.0.1-SNAPSHOT
      imagePullPolicy: IfNotPresent
      livenessProbe:
        failureThreshold: 10
        httpGet:
          path: /actuator/health
          port: 8000
          scheme: HTTP
        initialDelaySeconds: 180
        periodSeconds: 15
        successThreshold: 1
        timeoutSeconds: 30
      name: gateway
      ports:
      - containerPort: 8000
        protocol: TCP
      readinessProbe:
        failureThreshold: 10
        httpGet:
          path: /actuator/health
          port: 8000
          scheme: HTTP
        initialDelaySeconds: 180
        periodSeconds: 15
        successThreshold: 1
        timeoutSeconds: 30
      resources:
        limits:
          cpu: 500m
          memory: 512Mi
        requests:
          cpu: 100m
          memory: 256Mi
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-2prdx
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: kind-control-plane
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-2prdx
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T04:54:00Z"
      observedGeneration: 1
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T04:53:13Z"
      observedGeneration: 1
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T06:38:01Z"
      observedGeneration: 1
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T06:38:01Z"
      observedGeneration: 1
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T04:53:09Z"
      observedGeneration: 1
      status: "True"
      type: PodScheduled
    containerStatuses:
    - allocatedResources:
        cpu: 100m
        memory: 256Mi
      containerID: containerd://03ff9aa25168dc62e9e426f215ecb79f2cddffd4b0112dbe93f0b37d464aa4b9
      image: docker.io/library/gateway:0.0.1-SNAPSHOT
      imageID: sha256:94bb3f29909544f09016a6d8989df98c4f2a8daf8fd3ed00503a242ddf0f7180
      lastState:
        terminated:
          containerID: containerd://1b880049490d140739a712c934b00cfb00ec2b76e24fcb247ee9070cb42b3dab
          exitCode: 143
          finishedAt: "2026-04-17T06:33:29Z"
          reason: Error
          startedAt: "2026-04-17T06:27:52Z"
      name: gateway
      ready: true
      resources:
        limits:
          cpu: 500m
          memory: 512Mi
        requests:
          cpu: 100m
          memory: 256Mi
      restartCount: 2
      started: true
      state:
        running:
          startedAt: "2026-04-17T06:34:59Z"
      user:
        linux:
          gid: 0
          supplementalGroups:
          - 0
          uid: 0
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-2prdx
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 172.20.0.2
    hostIPs:
    - ip: 172.20.0.2
    observedGeneration: 1
    phase: Running
    podIP: 10.244.0.235
    podIPs:
    - ip: 10.244.0.235
    qosClass: Burstable
    startTime: "2026-04-17T04:53:13Z"
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "13"
      meta.helm.sh/release-name: gateway
      meta.helm.sh/release-namespace: microservices
    creationTimestamp: "2026-04-14T10:32:59Z"
    generation: 16
    labels:
      app: gateway
      app.kubernetes.io/managed-by: Helm
    name: gateway
    namespace: microservices
    resourceVersion: "650167"
    uid: a8ea2c23-6591-4f37-b138-7848ab1eaa3a
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: gateway
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-04-17T12:53:07+08:00"
        labels:
          app: gateway
      spec:
        containers:
        - env:
          - name: OTEL_EXPORTER_OTLP_ENDPOINT
            value: http://otel-lgtm:4318
          - name: OTEL_EXPORTER_OTLP_PROTOCOL
            value: http/protobuf
          - name: OTEL_SERVICE_NAME
            value: gateway
          - name: SPRING_CLOUD_CONSUL_HOST
            value: consul-server
          - name: SPRING_PROFILES_ACTIVE
            value: kubernetes
          - name: SPRING_RABBITMQ_HOST
            value: rabbitmq
          - name: SPRING_RABBITMQ_USERNAME
            valueFrom:
              secretKeyRef:
                key: username
                name: rabbitmq-default-user
          - name: SPRING_RABBITMQ_PASSWORD
            valueFrom:
              secretKeyRef:
                key: password
                name: rabbitmq-default-user
          image: gateway:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /actuator/health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 30
          name: gateway
          ports:
          - containerPort: 8000
            protocol: TCP
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /actuator/health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 30
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-04-15T01:51:15Z"
      lastUpdateTime: "2026-04-17T04:57:06Z"
      message: ReplicaSet "gateway-684488cc84" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-04-17T06:38:03Z"
      lastUpdateTime: "2026-04-17T06:38:03Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 16
    readyReplicas: 1
    replicas: 1
    terminatingReplicas: 0
    updatedReplicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: gateway
      meta.helm.sh/release-namespace: microservices
    creationTimestamp: "2026-04-13T07:37:28Z"
    labels:
      app: gateway
      app.kubernetes.io/managed-by: Helm
    name: gateway
    namespace: microservices
    resourceVersion: "306472"
    uid: 2c6d96fe-3715-4172-a959-d5e0b968ffe2
  spec:
    clusterIP: 10.96.163.216
    clusterIPs:
    - 10.96.163.216
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
    selector:
      app: gateway
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
