todelete/grafana-lgtm.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubectl.kubernetes.io/restartedAt: "2026-04-15T11:45:13+08:00"
    creationTimestamp: "2026-04-15T04:56:13Z"
    generateName: otel-lgtm-7bcf894b87-
    generation: 1
    labels:
      app: otel-lgtm
      pod-template-hash: 7bcf894b87
    name: otel-lgtm-7bcf894b87-hmwfd
    namespace: microservices
    ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicaSet
      name: otel-lgtm-7bcf894b87
      uid: 0fabc4f9-3985-4584-85ec-5821ccbc7b42
    resourceVersion: "649723"
    uid: f5ef49fd-d4f6-4a01-b5b9-0a58f5ed730c
  spec:
    containers:
    - env:
      - name: GF_DATABASE_QUERY_RETRIES
        value: "5"
      - name: GF_DATABASE_TRANSACTION_RETRIES
        value: "10"
      - name: GF_DATABASE_WAL
        value: "true"
      - name: GF_SERVER_ROOT_URL
        value: /grafana
      - name: GF_SERVER_SERVE_FROM_SUB_PATH
        value: "true"
      image: grafana/otel-lgtm:latest
      imagePullPolicy: Always
      name: otel-lgtm
      ports:
      - containerPort: 3000
        protocol: TCP
      - containerPort: 3200
        name: tempo
        protocol: TCP
      - containerPort: 4040
        name: pyroscope
        protocol: TCP
      - containerPort: 4317
        name: otlp-grpc
        protocol: TCP
      - containerPort: 4318
        name: otlp-http
        protocol: TCP
      - containerPort: 9090
        name: prometheus
        protocol: TCP
      readinessProbe:
        exec:
          command:
          - cat
          - /tmp/ready
        failureThreshold: 12
        initialDelaySeconds: 5
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
      resources:
        limits:
          cpu: "1"
          memory: 1Gi
        requests:
          cpu: 200m
          memory: 512Mi
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /data/grafana
        name: grafana-storage
      - mountPath: /data/tempo
        name: tempo-data
      - mountPath: /data/loki
        name: loki-data
      - mountPath: /loki
        name: loki-storage
      - mountPath: /data/prometheus
        name: p8s-storage
      - mountPath: /data/pyroscope
        name: pyroscope-storage
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-jx4ns
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: kind-control-plane
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: grafana-storage
      persistentVolumeClaim:
        claimName: otel-lgtm-pvc
    - emptyDir: {}
      name: tempo-data
    - emptyDir: {}
      name: loki-data
    - emptyDir: {}
      name: loki-storage
    - emptyDir: {}
      name: p8s-storage
    - emptyDir: {}
      name: pyroscope-storage
    - name: kube-api-access-jx4ns
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2026-04-15T04:57:17Z"
      observedGeneration: 1
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2026-04-15T04:56:17Z"
      observedGeneration: 1
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T06:31:11Z"
      observedGeneration: 1
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T06:31:11Z"
      observedGeneration: 1
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2026-04-15T04:56:14Z"
      observedGeneration: 1
      status: "True"
      type: PodScheduled
    containerStatuses:
    - allocatedResources:
        cpu: 200m
        memory: 512Mi
      containerID: containerd://19bbaa5a90430dd7eb28b28391237bbbce86158e4c93684a40fb98233f4e0fd8
      image: docker.io/grafana/otel-lgtm:latest
      imageID: docker.io/grafana/otel-lgtm@sha256:a7fbde2893d86ae4807701bc482736243e584eb90b5faa273d291ffff2a1374f
      lastState: {}
      name: otel-lgtm
      ready: true
      resources:
        limits:
          cpu: "1"
          memory: 1Gi
        requests:
          cpu: 200m
          memory: 512Mi
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2026-04-15T04:57:14Z"
      user:
        linux:
          gid: 0
          supplementalGroups:
          - 0
          uid: 0
      volumeMounts:
      - mountPath: /data/grafana
        name: grafana-storage
      - mountPath: /data/tempo
        name: tempo-data
      - mountPath: /data/loki
        name: loki-data
      - mountPath: /loki
        name: loki-storage
      - mountPath: /data/prometheus
        name: p8s-storage
      - mountPath: /data/pyroscope
        name: pyroscope-storage
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-jx4ns
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 172.20.0.2
    hostIPs:
    - ip: 172.20.0.2
    observedGeneration: 1
    phase: Running
    podIP: 10.244.0.184
    podIPs:
    - ip: 10.244.0.184
    qosClass: Burstable
    startTime: "2026-04-15T04:56:17Z"
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "4"
      meta.helm.sh/release-name: otel-lgtm
      meta.helm.sh/release-namespace: microservices
    creationTimestamp: "2026-04-13T07:14:44Z"
    generation: 4
    labels:
      app: otel-lgtm
      app.kubernetes.io/managed-by: Helm
    name: otel-lgtm
    namespace: microservices
    resourceVersion: "649735"
    uid: 438193b1-bae1-4346-98c4-d71651b927de
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: otel-lgtm
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-04-15T11:45:13+08:00"
        labels:
          app: otel-lgtm
      spec:
        containers:
        - env:
          - name: GF_DATABASE_QUERY_RETRIES
            value: "5"
          - name: GF_DATABASE_TRANSACTION_RETRIES
            value: "10"
          - name: GF_DATABASE_WAL
            value: "true"
          - name: GF_SERVER_ROOT_URL
            value: /grafana
          - name: GF_SERVER_SERVE_FROM_SUB_PATH
            value: "true"
          image: grafana/otel-lgtm:latest
          imagePullPolicy: Always
          name: otel-lgtm
          ports:
          - containerPort: 3000
            protocol: TCP
          - containerPort: 3200
            name: tempo
            protocol: TCP
          - containerPort: 4040
            name: pyroscope
            protocol: TCP
          - containerPort: 4317
            name: otlp-grpc
            protocol: TCP
          - containerPort: 4318
            name: otlp-http
            protocol: TCP
          - containerPort: 9090
            name: prometheus
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/ready
            failureThreshold: 12
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /data/grafana
            name: grafana-storage
          - mountPath: /data/tempo
            name: tempo-data
          - mountPath: /data/loki
            name: loki-data
          - mountPath: /loki
            name: loki-storage
          - mountPath: /data/prometheus
            name: p8s-storage
          - mountPath: /data/pyroscope
            name: pyroscope-storage
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: otel-lgtm-pvc
        - emptyDir: {}
          name: tempo-data
        - emptyDir: {}
          name: loki-data
        - emptyDir: {}
          name: loki-storage
        - emptyDir: {}
          name: p8s-storage
        - emptyDir: {}
          name: pyroscope-storage
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-04-15T05:18:50Z"
      lastUpdateTime: "2026-04-15T05:18:53Z"
      message: ReplicaSet "otel-lgtm-7bcf894b87" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-04-17T06:31:16Z"
      lastUpdateTime: "2026-04-17T06:31:16Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 4
    readyReplicas: 1
    replicas: 1
    terminatingReplicas: 0
    updatedReplicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: otel-lgtm
      meta.helm.sh/release-namespace: microservices
    creationTimestamp: "2026-04-13T07:14:37Z"
    labels:
      app: otel-lgtm
      app.kubernetes.io/managed-by: Helm
    name: otel-lgtm
    namespace: microservices
    resourceVersion: "304068"
    uid: 9b3def82-47f5-4385-8201-4c1b23f0e5bc
  spec:
    clusterIP: 10.96.224.118
    clusterIPs:
    - 10.96.224.118
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      nodePort: 30001
      port: 3000
      protocol: TCP
      targetPort: 3000
    - name: tempo
      nodePort: 32427
      port: 3200
      protocol: TCP
      targetPort: 3200
    - name: pyroscope
      nodePort: 30319
      port: 4040
      protocol: TCP
      targetPort: 4040
    - name: otlp-grpc
      nodePort: 30805
      port: 4317
      protocol: TCP
      targetPort: 4317
    - name: otlp-http
      nodePort: 31944
      port: 4318
      protocol: TCP
      targetPort: 4318
    - name: prometheus
      nodePort: 30608
      port: 9090
      protocol: TCP
      targetPort: 9090
    selector:
      app: otel-lgtm
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
