todelete/logs.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubectl.kubernetes.io/restartedAt: "2026-04-17T12:53:07+08:00"
    creationTimestamp: "2026-04-17T04:53:09Z"
    generateName: logs-6f5b9cdc99-
    generation: 1
    labels:
      app: logs
      pod-template-hash: 6f5b9cdc99
    name: logs-6f5b9cdc99-hsr98
    namespace: microservices
    ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicaSet
      name: logs-6f5b9cdc99
      uid: 861d25ea-817d-4652-bfac-c89fe99c6a4f
    resourceVersion: "640991"
    uid: 7f2deac7-4ed1-41b5-86ee-ac735306c695
  spec:
    containers:
    - env:
      - name: OTEL_EXPORTER_OTLP_ENDPOINT
        value: http://otel-lgtm:4318
      - name: OTEL_EXPORTER_OTLP_PROTOCOL
        value: http/protobuf
      - name: OTEL_SERVICE_NAME
        value: logs
      - name: SPRING_CLOUD_CONSUL_HOST
        value: consul-server
      - name: SPRING_PROFILES_ACTIVE
        value: kubernetes
      - name: SPRING_RABBITMQ_HOST
        value: rabbitmq
      - name: SPRING_RABBITMQ_USERNAME
        valueFrom:
          secretKeyRef:
            key: username
            name: rabbitmq-default-user
      - name: SPRING_RABBITMQ_PASSWORD
        valueFrom:
          secretKeyRef:
            key: password
            name: rabbitmq-default-user
      image: logs:0.0.1-SNAPSHOT
      imagePullPolicy: IfNotPresent
      livenessProbe:
        failureThreshold: 10
        httpGet:
          path: /actuator/health
          port: 8580
          scheme: HTTP
        initialDelaySeconds: 180
        periodSeconds: 15
        successThreshold: 1
        timeoutSeconds: 30
      name: logs
      ports:
      - containerPort: 8580
        protocol: TCP
      readinessProbe:
        failureThreshold: 10
        httpGet:
          path: /actuator/health
          port: 8580
          scheme: HTTP
        initialDelaySeconds: 180
        periodSeconds: 15
        successThreshold: 1
        timeoutSeconds: 30
      resources:
        limits:
          cpu: 500m
          memory: 512Mi
        requests:
          cpu: 100m
          memory: 256Mi
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-sk8ns
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: kind-control-plane
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-sk8ns
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T04:54:05Z"
      observedGeneration: 1
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T04:53:20Z"
      observedGeneration: 1
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T04:57:15Z"
      observedGeneration: 1
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T04:57:15Z"
      observedGeneration: 1
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2026-04-17T04:53:11Z"
      observedGeneration: 1
      status: "True"
      type: PodScheduled
    containerStatuses:
    - allocatedResources:
        cpu: 100m
        memory: 256Mi
      containerID: containerd://8ff9fb38af9db1fb20b989b7771b1b5b20851115ae146348d75445cbb8596f98
      image: docker.io/library/logs:0.0.1-SNAPSHOT
      imageID: sha256:8e0b51bad5b7bacee69b6a9e10e5eb6833830e157268c28a6ac65df3b54c9f0e
      lastState: {}
      name: logs
      ready: true
      resources:
        limits:
          cpu: 500m
          memory: 512Mi
        requests:
          cpu: 100m
          memory: 256Mi
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2026-04-17T04:54:03Z"
      user:
        linux:
          gid: 0
          supplementalGroups:
          - 0
          uid: 0
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-sk8ns
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 172.20.0.2
    hostIPs:
    - ip: 172.20.0.2
    observedGeneration: 1
    phase: Running
    podIP: 10.244.0.237
    podIPs:
    - ip: 10.244.0.237
    qosClass: Burstable
    startTime: "2026-04-17T04:53:20Z"
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "25"
      meta.helm.sh/release-name: logs
      meta.helm.sh/release-namespace: microservices
    creationTimestamp: "2026-04-13T07:32:48Z"
    generation: 28
    labels:
      app: logs
      app.kubernetes.io/managed-by: Helm
    name: logs
    namespace: microservices
    resourceVersion: "641051"
    uid: 597497e5-50a0-44fc-ba83-d296f17e2557
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: logs
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-04-17T12:53:07+08:00"
        labels:
          app: logs
      spec:
        containers:
        - env:
          - name: OTEL_EXPORTER_OTLP_ENDPOINT
            value: http://otel-lgtm:4318
          - name: OTEL_EXPORTER_OTLP_PROTOCOL
            value: http/protobuf
          - name: OTEL_SERVICE_NAME
            value: logs
          - name: SPRING_CLOUD_CONSUL_HOST
            value: consul-server
          - name: SPRING_PROFILES_ACTIVE
            value: kubernetes
          - name: SPRING_RABBITMQ_HOST
            value: rabbitmq
          - name: SPRING_RABBITMQ_USERNAME
            valueFrom:
              secretKeyRef:
                key: username
                name: rabbitmq-default-user
          - name: SPRING_RABBITMQ_PASSWORD
            valueFrom:
              secretKeyRef:
                key: password
                name: rabbitmq-default-user
          image: logs:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /actuator/health
              port: 8580
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 30
          name: logs
          ports:
          - containerPort: 8580
            protocol: TCP
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /actuator/health
              port: 8580
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 30
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-04-17T02:11:12Z"
      lastUpdateTime: "2026-04-17T02:11:12Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-04-15T01:43:47Z"
      lastUpdateTime: "2026-04-17T04:57:32Z"
      message: ReplicaSet "logs-6f5b9cdc99" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 28
    readyReplicas: 1
    replicas: 1
    terminatingReplicas: 0
    updatedReplicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: logs
      meta.helm.sh/release-namespace: microservices
    creationTimestamp: "2026-04-13T07:32:47Z"
    labels:
      app: logs
      app.kubernetes.io/managed-by: Helm
    name: logs
    namespace: microservices
    resourceVersion: "305942"
    uid: 31ab2d9a-4250-4b25-8c95-12e917a6b12a
  spec:
    clusterIP: 10.96.251.101
    clusterIPs:
    - 10.96.251.101
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8580
      protocol: TCP
      targetPort: 8580
    selector:
      app: logs
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
